# solarsim

./: Cargo.toml  README.md  justfile
solarsim-client/: .env.local  README.md  jest.config.ts  justfile  package-lock.json  package.json
solarsim-client/src/app/: brp.ts  globals.css  layout.tsx  page.module.css  page.tsx  requests.ts  types.d.ts
solarsim-client/src/app/__mocks__/: constants.ts
solarsim-client/src/app/__tests__/: page.test.tsx  request.test.ts
solarsim-client/src/app/__tests__/__snapshots__/: page.test.tsx.snap
solarsim-client/src/app/components/: ReadOnlyFields.tsx  SliderFields.tsx  ThemeToggle.tsx  theme-toggle.tsx
solarsim-client/src/app/hooks/: usePolling.ts
solarsim-client/src/app/hooks/__tests__/: usePolling.test.ts
solarsim-client/src/app/palette/: radix-accents-dark.css  radix-accents-light.css  radix-background-dark.css  radix-background-light.css  radix-gray-dark.css  radix-gray-light.css
solarsim-client/src/app/utils/: brp.ts  fetch.ts  strings.ts  usePolling.ts
solarsim-server/: Cargo.toml  README.md  justfile
solarsim-server/src/: main.rs
solarsim-server/src/brp/: mod.rs  update_field.rs
solarsim-server/src/simulation/: mod.rs  simulation_config.rs  simulation_field.rs
solarsim-server/src/ui/: mod.rs
solarsim-server/src/ui/widgets/: mod.rs  slider.rs
solarsim-server/src/utils/: maybe.rs  mod.rs  strings.rs  temperature.rs
solarsim-server/src/widgets/: mod.rs  slider.rs
src/: main.rs
