[package]
name = "solarsim-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[dependencies]
bevy = { version = "0.17.2", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_remote",
    "bevy_render",
    "bevy_text",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "webgpu",
] }
serde = { version = "1.0.228", default-features = false, features = [
    "serde_derive",
] }
